# Hygeia

./: .gitignore  ChangeLog.md  Hygeia.cabal  README.md  hie.yaml  package.yaml  research.org  roadmap.org  sample.txt  sampleConfig  sampleconfig  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
src/: CLI.hs  Computation.hs  Config.hs  Daemon.hs  Email.hs  Notification.hs  Parser.hs  Reports.hs  Template.hs  ]
src/Computation/: Error.hs  Monad.hs  Types.hs  Util.hs  Utils.hs
src/Configuration/: Config.hs  Daemon.hs
src/Parser/: Config.hs  ConfigFile.hs  Entry.hs  Input.hs  Monad.hs  Types.hs
src/Report/: Email.hs  Notification.hs  PrettyPrint.hs  Template.hs
test/: CLITest.hs  ComputationTest.hs  ConfigTest.hs  Main.hs  ParserTest.hs  Test.hs  sample.txt  sample2.txt  sampleconfig
test/sample/: sample.txt  sample2.txt  sampleconfig
