cabal-version: 1.12

name:           hygeia
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/hygeia#readme>
homepage:       https://github.com/Ei30metry/hygeia#readme
bug-reports:    https://github.com/Ei30metry/hygeia/issues
author:         Artin Ghasivand
maintainer:     ghasivand.artin@gmail.com
copyright:      2022 Artin Ghasivand
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Ei30metry/hygeia

library
  exposed-modules:
        CLI
      , Computation
      , Daemon
      , Computation.Utils
      , Computation.Types
      , Computation.Error
      , Computation.Monad
      , Config
      , Parser.Entry
      , Parser.Monad
      , Parser.Types
      , Template

  other-modules:
      Paths_hygeia

  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , prettyprinter
    , directory
    , lens
    , time
    , vector
    , beam-sqlite
    , containers
    , conduit
    , split
    , mtl
    , stm
    , optparse-applicative
    , parsec
    , transformers
    , process
    , text
    , unix
    , HsYAML
  default-language: GHC2021
  default-extensions: GADTs
                    , LambdaCase
                    , OverloadedStrings
                    , TypeFamilies
                    , PatternSynonyms
                    , DataKinds
                    , PolyKinds
                    , FlexibleContexts
                    , UndecidableInstances
                    , AllowAmbiguousTypes
                    , MultiParamTypeClasses
                    , FlexibleInstances
                    , TypeFamilyDependencies
                    

executable hygeia-exe
  main-is: Main.hs
  other-modules:
      Paths_hygeia
  hs-source-dirs:
      app
  ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:
      hygeia
    , base >=4.7 && <5
    , bytestring
    , lens
    , mtl
    , optparse-applicative
    , prettyprinter
    , beam-sqlite
    , parsec
    , process
    , time
    , unix
    , directory
    , HsYAML
    , text
  default-language: Haskell2010

test-suite hygeia-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
       Paths_hygeia
     , CLITest
     , ConfigTest
     , ParserTest
     , ComputationTest
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                  hygeia
                , HUnit
                , QuickCheck
                , base >=4.7 && <5
                , bytestring
                , beam-sqlite
                , mtl
                , time
                , optparse-applicative
                , parsec
                , tasty
                , HsYAML
                , tasty-hunit
                , hspec
                , tasty-hspec
  default-language: GHC2021
